--- a/Activité pratique N°7/customer-front-thymeleaf-app/src/main/resources/application.properties
+++ b/Activité pratique N°7/customer-front-thymeleaf-app/src/main/resources/application.properties
@@ -12,12 +12,12 @@ spring.security.oauth2.client.registration.github.client-secret=42817376b7f0f3ec
 spring.security.oauth2.client.provider.github.user-name-attribute=login
 
 spring.security.oauth2.client.registration.keycloak.client-name=keycloak
-spring.security.oauth2.client.registration.keycloak.client-id=sdia-customer-client
-spring.security.oauth2.client.registration.keycloak.client-secret=QbRiiBDZD13SdGMjTdVX9nf2tT9I3iDu
+spring.security.oauth2.client.registration.keycloak.client-id=wallet-client
+spring.security.oauth2.client.registration.keycloak.client-secret=YKinXdXbhGZP9ptpl5bJ4UgvtDCa3WII
 spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email,offline_access
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.keycloak.redirect-uri=${KEYCLOAK_REDIRECT_URI:http://localhost:8083/login/oauth2/code/sdia-customer-client}
-spring.security.oauth2.client.provider.keycloak.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/sdia-realm}
+spring.security.oauth2.client.registration.keycloak.redirect-uri=${KEYCLOAK_REDIRECT_URI:http://localhost:8083/login/oauth2/code/wallet-client}
+spring.security.oauth2.client.provider.keycloak.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/wallet-realm}
 
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
 inventory.service.base.uri=${INVENTORY_SERVICE_BASE_URI:http://localhost:8098}
